fix sponsors on mobile

--- a/src/components/section_sponsors/sponsors.scss
+++ b/src/components/section_sponsors/sponsors.scss
@@ -14,7 +14,8 @@
   &__content {
     margin-bottom: 1em;
     &.bottom {
-      min-height: 600px;
+      min-height: 605px;
+      margin-bottom: 0;
     }
   }
 
@@ -120,6 +121,7 @@
   .community,
   .travel {
     color: #f2f2f2;
+    width: fit-content;
   }
 
   .opportunity {
@@ -153,6 +155,24 @@
     .inner-wrap-desktop {
       margin: 0 auto;
       width: 80%;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    &__content {
+      &.bottom {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 0;  
+      }
+    }
+    .opportunity,
+    .community,
+    .travel {
+      color: #f2f2f2;
+      width: 200px;
+      margin: 40px 0 10px;
     }
   }
 }
